--- a/rackshift-proxy/src/main/resources/static/index.html
+++ b/rackshift-proxy/src/main/resources/static/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>单文件上传</title>
+    <title>rackshift-proxy</title>
 </head>
 <body>
-<form method="POST" enctype="multipart/form-data" action="/image/upload">
-    <input type="file" name="file"><br>
-    <input type="submit" value="提交">
-</form>
+running!
 </body>
 </html>
